Fix spacing on landing page

--- a/resources/assets/admin/conversion_templates/design_css.scss
+++ b/resources/assets/admin/conversion_templates/design_css.scss
@@ -23,7 +23,7 @@
     }
     &_container {
       width: 100%;
-      padding: 0 24px 24px 24px;
+      padding: 0 0 24px 24px;
     }
     &_elements {
       .el-form-item {
