--- a/resources/assets/admin/css/settings_global.scss
+++ b/resources/assets/admin/css/settings_global.scss
@@ -158,7 +158,8 @@
 
 .ff_screen_settings,
 .ff_screen_entries,
-.ff_screen_msformentries {
+.ff_screen_msformentries,
+.ff_screen_conversational_design {
   .ff-navigation-right {
     padding-right: 0;
     .el-button {
